@@ -182,6 +182,18 @@ sub set_privacy {
     return $self;
 }
 
+has 'properties' => (
+    is          => 'rw',
+    predicate   => 'has_properties'
+);
+
+sub set_properties {
+    my $self = shift;
+    my $properties = @_ % 2 ? shift @_ : { @_ };
+    $self->properties($properties);
+    return $self;
+}
+
 around get_post_params => sub {
     my ($orig, $self) = @_;
     my $post = $orig->($self);
@@ -215,6 +227,9 @@ around get_post_params => sub {
         my %privacy = %{$self->privacy_options};
         $privacy{value} = $self->privacy;
         push @$post, privacy => JSON->new->encode(\%privacy);
+    }
+    if ($self->has_properties) {
+        push @$post, properties => JSON->new->encode($self->properties);
     }
     return $post;
 };
@@ -359,6 +374,12 @@ The URI of the action.
 =head2 set_privacy ( setting, options )
 
 A completely optional privacy setting. 
+
+=head2 set_properties ( properties )
+
+"property" values assigned when the post is published. This is typically rendered as a list of links.
+
+    $post->set_properties( { "search engine:" => { "text" => "Google", "href" => "http://www.google.com/" } } );
 
 =head3 setting
 
